third_party/move/move-compiler-v2/tests/checking/typing/mutate_field_internal.exp

Diagnostics:
error: Invalid operation: field access on `X::S` can only be done within module `0x2::X`
   ┌─ tests/checking/typing/mutate_field_internal.move:12:9
   │
12 │     fun t0() {
   │         ^^
13 │         X::s().f = 0;
   │         -------- field access here

error: Invalid operation: field access on `X::S` can only be done within module `0x2::X`
   ┌─ tests/checking/typing/mutate_field_internal.move:12:9
   │
12 │     fun t0() {
   │         ^^
   ·
15 │         s.f = 0;
   │         --- field access here
